--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /* Top Section */
 #p1{
-  background-image: url(Pics/bg.jpg);
+  background-image: url("Pics/bg.jpg");
 }
 #p2{
-  background-image: url(Pics/bugbg.jpg);
+  background-image: url("Pics/bugbg.jpg");
 }
 #p3{
-  background-image: url(Pics/toolsbg.jpg);
+  background-image: url("Pics/toolsbg.jpg");
 }
 .front{
   background-size: 100%;
