--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Top Section */
 #p1{
-  background-image: url("https://github.com/SriSitharth/bypass/blob/master/Pics/bg.jpg");
+  background-image: url("Pics/bg.jpg");
 }
 #p2{
   background-image: url("https://github.com/SriSitharth/bypass/blob/master/Pics/bugbg.jpg");
